# Scaling-PyTorch-model-on-FastAPI

./: .gitignore  README.md  benchmark.py  dockerfile  main.py  pretrained.py  pyproject.toml
