[project]
name = "scaling-pytorch-model-on-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "numpy>=2.4.3",
    "pillow>=12.1.1",
    "python-multipart>=0.0.22",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "uvicorn>=0.42.0",
]
